# rust-books

./: .env  Cargo.toml  db
migrations/contacts/: up.sql
migrations/init/: down.sql  up.sql
seeders/: seed_contacts.sql
src/: main.rs
src/config/: template.rs
src/contacts/: contact_repository.rs  mod.rs  models.rs  routes.rs
templates/: contact.html  error.html  index.html  update-contact.html
