[package]
name = "books"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = "0.7.4"
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "macros", "runtime-tokio-native-tls"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs"] }
